@@ -7,6 +7,8 @@ n = size(u,1)/4;
 p = round(1/2 + sqrt(n/2 - 1/4));
 M = size(u,2);
 
+figure(1)
+
 for m = 1:M
 
   clf
@@ -26,7 +28,23 @@ for m = 1:M
     
   end
 
+  axis([-0.1 1.1 -0.1 1.1])
+  axis equal
+  
   disp(['t = ' num2str(t(m)) ' (Press any key to continue)'])
   pause
   
 end
+
+figure(2)
+
+% Lower left particle
+x1 = u(1:2,:);
+
+% Upper right particle
+x2 = u(2*p^2-1:2*p^2,:);
+
+% Radius of structure
+r = sqrt(sum((x1 - x2).^2,1));
+
+plot(t, r)
